--- a/main.css
+++ b/main.css
@@ -1,4 +1,24 @@
-@use './components/base';
-@use './components/body';
-@use './components/header';
-/*# sourceMappingURL=main.css.map */
+@import url("https://fonts.googleapis.com/css2?family=Barlow+Condensed&family=Bellefair&display=swap");
+/*** Colors ***/
+/*** Typography ***/
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+:root {
+  font-size: 62.5%;
+}
+
+body {
+  font-size: 1.6rem;
+  font-weight: 400;
+  font-family: "Bellefair", serif;
+}
+
+header {
+  background-color: red;
+  height: 100px;
+  width: 100%;
+}/*# sourceMappingURL=main.css.map */
