Change the headers background

--- a/main.css
+++ b/main.css
@@ -18,7 +18,5 @@ body {
 }
 
 header {
-  background-color: red;
-  height: 100px;
-  width: 100%;
+  background-color: #D0D6F9;
 }/*# sourceMappingURL=main.css.map */
