--- a/components/_base.scss
+++ b/components/_base.scss
@@ -1,8 +1,11 @@
 @import url("https://fonts.googleapis.com/css2?family=Barlow+Condensed&family=Bellefair&display=swap");
 /*** Colors ***/
-$white: #FFFFFF;
-$lilac: #D0D6F9;
-$black: #0B0D17;
+$white: #ffffff;
+$white-medium: #ffffff8b;
+$white-light: #ffffff19;
+$lilac: #d0d6f9;
+$black: #0b0d17;
+
 /*** Typography ***/
 $heading-font-family: "Barlow Condensed", sans-serif;
 $body-font-family: "Bellefair", serif;
@@ -15,7 +18,9 @@ $h4-font-size: 3.2rem; //32px;
 $h5-font-size: 2.8rem; //28px;
 $subheading-1: 2.8rem; //28px;
 $subheading-2: 1.4rem; //14px;
+$nav-lg: 1.8rem; //18px;
 $base-font-weight: 400;
+
 // Styles
 * {
   margin: 0;
@@ -29,5 +34,5 @@ body {
   font-size: $base-font-size;
   font-weight: $base-font-weight;
   font-family: $body-font-family;
-  
+  // background-color: $black;
 }
