--- a/main.css
+++ b/main.css
@@ -17,6 +17,235 @@ body {
   font-family: "Bellefair", serif;
 }
 
-header {
-  background-color: #D0D6F9;
+.header {
+  background-color: transparent;
+  color: #ffffff;
+  display: flex;
+  height: 10rem;
+  align-items: center;
+  justify-content: space-between;
+  position: fixed;
+  top: 0;
+  width: 100vw;
+  z-index: 1;
+}
+.header .logo {
+  width: 5rem;
+  height: 5rem;
+  margin: 2rem;
+}
+.header .navigation-sm {
+  position: relative;
+  display: inline-block;
+  z-index: 2;
+  margin-right: 5rem;
+}
+.header .menu-btn {
+  display: inline-block;
+  background-color: transparent;
+  border: none;
+  padding: 1rem;
+}
+.header .menu-btn:hover {
+  color: rgba(255, 255, 255, 0.5450980392);
+}
+.header .fa-solid {
+  font-size: 2.8rem;
+  color: #d0d6f9;
+}
+.header .menu {
+  display: none;
+  position: absolute;
+  top: 100%;
+  right: -52.5px;
+  min-width: 150px;
+  list-style: none;
+  font-size: 1.6rem;
+  background-color: #0b0d17;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
+}
+.header .menu-btn:hover .menu {
+  display: block;
+}
+.header .menu-item {
+  padding: 1rem;
+  border-top: 1px solid rgba(255, 255, 255, 0.0980392157);
+}
+.header .menu-item:hover {
+  text-decoration: none;
+  background-color: rgba(255, 255, 255, 0.0980392157);
+}
+.header .menu-item a {
+  text-decoration: none;
+  color: #ffffff;
+  padding: 1rem;
+}
+.header .navigation-lg {
+  display: none;
+}
+
+@media only screen and (min-width: 768px) {
+  .header {
+    justify-content: space-between;
+  }
+  .header .navigation-sm {
+    display: none;
+  }
+  .header .navigation-lg {
+    background-color: rgba(255, 255, 255, 0.0980392157);
+    display: flex;
+    justify-content: space-around;
+    width: 70vw;
+  }
+  .header .menu-lg {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding-bottom: 1px;
+  }
+  .header .menu-item-lg {
+    list-style: none;
+    padding: 4rem 1rem;
+  }
+  .header .menu-item-lg a {
+    list-style: none;
+    text-decoration: none;
+    text-transform: uppercase;
+    color: #ffffff;
+    padding: 4rem 1rem;
+  }
+  .header .menu-item-lg:hover {
+    border-bottom: 1px solid #ffffff;
+  }
+  .header .bold-text {
+    font-weight: bold;
+    padding: 1rem;
+  }
+}
+@media only screen and (min-width: 992px) {
+  .header {
+    margin-top: 5rem;
+  }
+  .header .navigation-lg {
+    width: 60vw;
+    position: relative;
+  }
+  .header .navigation-lg::before {
+    content: "";
+    position: absolute;
+    left: -29vw;
+    top: 50%;
+    display: inline-block;
+    width: 33vw;
+    height: 2px;
+    background-color: rgba(255, 255, 255, 0.0980392157);
+  }
+  .header .menu-item-lg {
+    padding: 4rem 2rem;
+  }
+  .header .menu-item-lg a {
+    padding: 4rem 2rem;
+    font-size: 1.8rem;
+  }
+}
+.main-destination {
+  background-image: url(../assets/destination/background-destination-mobile.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  color: #d0d6f9;
+  align-items: center;
+}
+.main-destination .planet-section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 30vh;
+  margin-bottom: 5rem;
+  width: 80vw;
+}
+.main-destination .destination-page-header {
+  margin-top: 10rem;
+  color: #ffffff;
+  text-transform: uppercase;
+  font-weight: 400;
+  font-family: "Barlow Condensed", sans-serif;
+  font-size: 1.8rem;
+  padding: 1rem;
+  margin-bottom: 1rem;
+}
+.main-destination .bold-text {
+  color: rgba(255, 255, 255, 0.5450980392);
+  font-weight: bold;
+  padding: 2rem;
+}
+.main-destination .fig-moon,
+.main-destination .img-moon {
+  width: 20rem;
+  height: 20rem;
+}
+.main-destination .planet-info-section {
+  display: flex;
+  flex-direction: column;
+  width: 80vw;
+  margin-top: 10rem;
+}
+.main-destination .planet-navigation-list {
+  display: flex;
+  justify-content: center;
+  font-family: "Barlow Condensed", sans-serif;
+  gap: 0.5rem;
+}
+.main-destination .planet-navigation-item {
+  text-transform: uppercase;
+  list-style: none;
+  padding: 5px 10px;
+}
+.main-destination .selected {
+  color: #ffffff;
+  border-bottom: 2px solid #ffffff;
+  font-weight: bold;
+}
+.main-destination .planet-navigation-item:active {
+  color: #ffffff;
+  border-bottom: 2px solid #ffffff;
+  font-weight: bold;
+}
+.main-destination .planet-navigation-item:hover {
+  border-bottom: 2px solid rgba(255, 255, 255, 0.0980392157);
+  font-weight: bold;
+}
+.main-destination .planet-name-header {
+  text-align: center;
+  color: #ffffff;
+  text-transform: uppercase;
+  font-weight: 400;
+  font-size: 3.2rem;
+  padding: 1rem;
+}
+.main-destination .destination-paragraph {
+  font-size: 1.8 rem;
+  text-align: center;
+  position: relative;
+  padding-bottom: 3rem;
+  border-bottom: 2px solid rgba(255, 255, 255, 0.0980392157);
+}
+.main-destination .planet-date-container {
+  text-transform: uppercase;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.main-destination .subheading-destination {
+  font-size: 1.4rem;
+  font-family: "Barlow Condensed", sans-serif;
+  margin-top: 2rem;
+  padding-bottom: 1rem;
+}
+.main-destination .subheading-destination-paragraph {
+  font-size: 2.8rem;
+  color: #ffffff;
 }/*# sourceMappingURL=main.css.map */
