--- a/main.scss
+++ b/main.scss
@@ -1,3 +1,4 @@
-@use './components/base';
-@use './components/body';
-@use './components/header';
+@use "./components/base";
+@use "./components/body";
+@use "./components/header";
+@use "./components/destination-moon";
