Add the planet-navbar to the destination.html

--- a/main.css
+++ b/main.css
@@ -158,6 +158,75 @@ body {
   flex-direction: column;
   color: #d0d6f9;
   align-items: center;
+  /*Navigation Highlight*/
+  /*Images*/
+  /*Planet's Information */
+  /*Other styles*/
+}
+.main-destination .destination-input {
+  display: none;
+}
+.main-destination .planet-navigation-container {
+  text-transform: uppercase;
+  font-family: "Barlow Condensed", sans-serif;
+  margin-top: 5rem;
+}
+.main-destination .nav-label {
+  padding: 0.5rem 1rem;
+}
+.main-destination .nav-label:hover {
+  border-bottom: 2px solid rgba(255, 255, 255, 0.0980392157);
+  font-weight: bold;
+}
+.main-destination .figure-destination {
+  display: none;
+}
+.main-destination .planet-info {
+  display: none;
+}
+.main-destination #moon:checked ~ .planet-navigation-container > .nav-moon {
+  color: #ffffff;
+  font-weight: bold;
+  border-bottom: 2px solid #ffffff;
+}
+.main-destination #mars:checked ~ .planet-navigation-container > .nav-mars {
+  color: #ffffff;
+  font-weight: bold;
+  border-bottom: 2px solid #ffffff;
+}
+.main-destination #europa:checked ~ .planet-navigation-container > .nav-europa {
+  color: #ffffff;
+  font-weight: bold;
+  border-bottom: 2px solid #ffffff;
+}
+.main-destination #titan:checked ~ .planet-navigation-container > .nav-titans {
+  color: #ffffff;
+  font-weight: bold;
+  border-bottom: 2px solid #ffffff;
+}
+.main-destination #moon:checked ~ .planet-section .fig-moon {
+  display: block;
+}
+.main-destination #mars:checked ~ .planet-section .fig-mars {
+  display: block;
+}
+.main-destination #europa:checked ~ .planet-section .fig-europa {
+  display: block;
+}
+.main-destination #titan:checked ~ .planet-section .fig-titan {
+  display: block;
+}
+.main-destination #moon:checked ~ .planet-info-section .info-moon {
+  display: block;
+}
+.main-destination #mars:checked ~ .planet-info-section .info-mars {
+  display: block;
+}
+.main-destination #europa:checked ~ .planet-info-section .info-europa {
+  display: block;
+}
+.main-destination #titan:checked ~ .planet-info-section .info-titan {
+  display: block;
 }
 .main-destination .planet-section {
   display: flex;
@@ -182,8 +251,8 @@ body {
   font-weight: bold;
   padding: 2rem;
 }
-.main-destination .fig-moon,
-.main-destination .img-moon {
+.main-destination .figure-destination,
+.main-destination .img-destination {
   width: 20rem;
   height: 20rem;
 }
@@ -191,32 +260,7 @@ body {
   display: flex;
   flex-direction: column;
   width: 80vw;
-  margin-top: 10rem;
-}
-.main-destination .planet-navigation-list {
-  display: flex;
-  justify-content: center;
-  font-family: "Barlow Condensed", sans-serif;
-  gap: 0.5rem;
-}
-.main-destination .planet-navigation-item {
-  text-transform: uppercase;
-  list-style: none;
-  padding: 5px 10px;
-}
-.main-destination .selected {
-  color: #ffffff;
-  border-bottom: 2px solid #ffffff;
-  font-weight: bold;
-}
-.main-destination .planet-navigation-item:active {
-  color: #ffffff;
-  border-bottom: 2px solid #ffffff;
-  font-weight: bold;
-}
-.main-destination .planet-navigation-item:hover {
-  border-bottom: 2px solid rgba(255, 255, 255, 0.0980392157);
-  font-weight: bold;
+  margin-top: 5rem;
 }
 .main-destination .planet-name-header {
   text-align: center;
@@ -229,7 +273,6 @@ body {
 .main-destination .destination-paragraph {
   font-size: 1.8 rem;
   text-align: center;
-  position: relative;
   padding-bottom: 3rem;
   border-bottom: 2px solid rgba(255, 255, 255, 0.0980392157);
 }
