--- a/components/_destination-moon.scss
+++ b/components/_destination-moon.scss
@@ -1,6 +1,110 @@
 @use "./base";
 // Styles for the small devices
 
+// .main-destination {
+//   background-image: url(../assets/destination/background-destination-mobile.jpg);
+//   background-size: cover;
+//   background-repeat: no-repeat;
+//   width: 100vw;
+//   height: 100vh;
+//   display: flex;
+//   flex-direction: column;
+//   color: base.$lilac;
+//   align-items: center;
+//   .planet-section {
+//     display: flex;
+//     flex-direction: column;
+//     align-items: center;
+//     height: 30vh;
+//     margin-bottom: 5rem;
+//     width: 80vw;
+//   }
+//   .destination-page-header {
+//     margin-top: 10rem;
+//     color: base.$white;
+//     text-transform: uppercase;
+//     font-weight: base.$base-font-weight;
+//     font-family: base.$heading-font-family;
+//     font-size: 1.8rem;
+//     padding: 1rem;
+//     margin-bottom: 1rem;
+//   }
+//   .bold-text {
+//     color: base.$white-medium;
+//     font-weight: bold;
+//     padding: 2rem;
+//   }
+
+//   .fig-moon,
+//   .img-moon {
+//     width: 20rem;
+//     height: 20rem;
+//   }
+//   .planet-info-section {
+//     display: flex;
+//     flex-direction: column;
+//     width: 80vw;
+//     margin-top: 10rem;
+//   }
+//   .planet-navigation-list {
+//     display: flex;
+//     justify-content: center;
+//     font-family: base.$heading-font-family;
+//     gap: 0.5rem;
+//   }
+
+//   .planet-navigation-item {
+//     text-transform: uppercase;
+//     list-style: none;
+//     padding: 5px 10px;
+//   }
+//   .selected {
+//     color: base.$white;
+//     border-bottom: 2px solid base.$white;
+//     font-weight: bold;
+//   }
+//   .planet-navigation-item:active {
+//     color: base.$white;
+//     border-bottom: 2px solid base.$white;
+//     font-weight: bold;
+//   }
+//   .planet-navigation-item:hover {
+//     border-bottom: 2px solid base.$white-light;
+//     font-weight: bold;
+//   }
+//   .planet-name-header {
+//     text-align: center;
+//     color: base.$white;
+//     text-transform: uppercase;
+//     font-weight: base.$base-font-weight;
+//     font-size: base.$h4-font-size;
+//     padding: 1rem;
+//   }
+//   .destination-paragraph {
+//     font-size: 1.8 rem;
+//     text-align: center;
+//     position: relative;
+//     padding-bottom: 3rem;
+//     border-bottom: 2px solid base.$white-light;
+//   }
+//   .planet-date-container {
+//     text-transform: uppercase;
+//     display: flex;
+//     flex-direction: column;
+//     align-items: center;
+//   }
+//   .subheading-destination {
+//     font-size: base.$subheading-2;
+//     font-family: base.$heading-font-family;
+//     margin-top: 2rem;
+//     padding-bottom: 1rem;
+//   }
+//   .subheading-destination-paragraph {
+//     font-size: base.$subheading-1;
+//     color: base.$white;
+//   }
+// }
+
 .main-destination {
   background-image: url(../assets/destination/background-destination-mobile.jpg);
   background-size: cover;
@@ -11,6 +115,79 @@
   flex-direction: column;
   color: base.$lilac;
   align-items: center;
+
+  .destination-input {
+    display: none;
+  }
+  .planet-navigation-container {
+    text-transform: uppercase;
+    font-family: base.$heading-font-family;
+    margin-top: 5rem;
+  }
+  .nav-label {
+    padding: 0.5rem 1rem;
+  }
+  .nav-label:hover {
+    border-bottom: 2px solid base.$white-light;
+    font-weight: bold;
+  }
+
+  .figure-destination {
+    display: none;
+  }
+  .planet-info {
+    display: none;
+  }
+  /*Navigation Highlight*/
+  #moon:checked ~ .planet-navigation-container > .nav-moon {
+    color: base.$white;
+    font-weight: bold;
+    border-bottom: 2px solid base.$white;
+  }
+  #mars:checked ~ .planet-navigation-container > .nav-mars {
+    color: base.$white;
+    font-weight: bold;
+    border-bottom: 2px solid base.$white;
+  }
+  #europa:checked ~ .planet-navigation-container > .nav-europa {
+    color: base.$white;
+    font-weight: bold;
+    border-bottom: 2px solid base.$white;
+  }
+  #titan:checked ~ .planet-navigation-container > .nav-titans {
+    color: base.$white;
+    font-weight: bold;
+    border-bottom: 2px solid base.$white;
+  }
+  /*Images*/
+
+  #moon:checked ~ .planet-section .fig-moon {
+    display: block;
+  }
+  #mars:checked ~ .planet-section .fig-mars {
+    display: block;
+  }
+  #europa:checked ~ .planet-section .fig-europa {
+    display: block;
+  }
+  #titan:checked ~ .planet-section .fig-titan {
+    display: block;
+  }
+  /*Planet's Information */
+  #moon:checked ~ .planet-info-section .info-moon {
+    display: block;
+  }
+  #mars:checked ~ .planet-info-section .info-mars {
+    display: block;
+  }
+  #europa:checked ~ .planet-info-section .info-europa {
+    display: block;
+  }
+  #titan:checked ~ .planet-info-section .info-titan {
+    display: block;
+  }
+  /*Other styles*/
+
   .planet-section {
     display: flex;
     flex-direction: column;
@@ -35,8 +212,8 @@
     padding: 2rem;
   }
 
-  .fig-moon,
-  .img-moon {
+  .figure-destination,
+  .img-destination {
     width: 20rem;
     height: 20rem;
   }
@@ -44,34 +221,9 @@
     display: flex;
     flex-direction: column;
     width: 80vw;
-    margin-top: 10rem;
-  }
-  .planet-navigation-list {
-    display: flex;
-    justify-content: center;
-    font-family: base.$heading-font-family;
-    gap: 0.5rem;
+    margin-top: 5rem;
   }
 
-  .planet-navigation-item {
-    text-transform: uppercase;
-    list-style: none;
-    padding: 5px 10px;
-  }
-  .selected {
-    color: base.$white;
-    border-bottom: 2px solid base.$white;
-    font-weight: bold;
-  }
-  .planet-navigation-item:active {
-    color: base.$white;
-    border-bottom: 2px solid base.$white;
-    font-weight: bold;
-  }
-  .planet-navigation-item:hover {
-    border-bottom: 2px solid base.$white-light;
-    font-weight: bold;
-  }
   .planet-name-header {
     text-align: center;
     color: base.$white;
@@ -83,7 +235,6 @@
   .destination-paragraph {
     font-size: 1.8 rem;
     text-align: center;
-    position: relative;
     padding-bottom: 3rem;
     border-bottom: 2px solid base.$white-light;
   }
