--- a/main.css
+++ b/main.css
@@ -28,6 +28,7 @@ body {
   top: 0;
   width: 100vw;
   z-index: 1;
+  /* Old version .menu*/
 }
 .header .logo {
   width: 5rem;
@@ -56,20 +57,27 @@ body {
 .header .menu {
   display: none;
   position: absolute;
+  right: -5rem;
   top: 100%;
-  right: -52.5px;
-  min-width: 150px;
+  width: 70vw;
+  height: 100vh;
   list-style: none;
-  font-size: 1.6rem;
-  background-color: #0b0d17;
-  box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
+  font-size: 1.8rem;
+  color: #ffffff;
+  text-transform: uppercase;
+  /* From https://css.glass */
+  background: rgba(255, 255, 255, 0.13);
+  border-radius: 2px;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(15.4px);
+  -webkit-backdrop-filter: blur(15.4px);
+  /***/
 }
 .header .menu-btn:hover .menu {
   display: block;
 }
 .header .menu-item {
-  padding: 1rem;
-  border-top: 1px solid rgba(255, 255, 255, 0.0980392157);
+  padding: 3rem 1rem;
 }
 .header .menu-item:hover {
   text-decoration: none;
@@ -82,6 +90,10 @@ body {
 }
 .header .navigation-lg {
   display: none;
+}
+.header .bold-text {
+  font-weight: bold;
+  padding: 1rem;
 }
 
 @media only screen and (min-width: 768px) {
@@ -116,10 +128,6 @@ body {
   }
   .header .menu-item-lg:hover {
     border-bottom: 1px solid #ffffff;
-  }
-  .header .bold-text {
-    font-weight: bold;
-    padding: 1rem;
   }
 }
 @media only screen and (min-width: 992px) {
@@ -169,7 +177,6 @@ body {
 .main-destination .planet-navigation-container {
   text-transform: uppercase;
   font-family: "Barlow Condensed", sans-serif;
-  margin-top: 5rem;
 }
 .main-destination .nav-label {
   padding: 0.5rem 1rem;
@@ -232,8 +239,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  height: 30vh;
-  margin-bottom: 5rem;
+  margin-bottom: 2rem;
   width: 80vw;
 }
 .main-destination .destination-page-header {
