--- a/components/_base.scss
+++ b/components/_base.scss
@@ -11,6 +11,7 @@ $heading-font-family: "Barlow Condensed", sans-serif;
 $body-font-family: "Bellefair", serif;
 //font size & weight
 $base-font-size: 1.6rem; //16px;
+$md-lg-font-size: 1.8rem; //18px;
 $h1-font-size: 15rem; //150px;
 $h2-font-size: 10rem; //100px;
 $h3-font-size: 5.6rem; //56px;
